@@ -4,6 +4,7 @@ Date: ???
   Changes:
     - Changed the alloy smelter description. (https://github.com/pyanodon/pybugreports/issues/535)
     - Nerfed big aluminium mine module slots to 1 to match other big mines.
+    - Changed molten quartz 6 to use lithium peroxide instead of fuel rods
 ---------------------------------------------------------------------------------------------------
 Version: 2.4.16
 Date: 2024-6-3
